# markasset

./: .gitignore  AUTH.md  CLAUDE.md  DRIVE.md  TESTING.md  TODO.md  api.html  gauth.md
.claude/: settings.local.json
backend/: package-lock.json  package.json  wrangler.jsonc
backend/frontend/: index.html  package-lock.json  package.json  vite.config.js
backend/frontend/public/: manifest.json
backend/frontend/src/: App.jsx  index.css
backend/frontend/src/components/: Header.jsx  ProgressBar.jsx  StatusMessage.jsx  UploadForm.jsx
backend/frontend/src/hooks/: useAuth.js
backend/frontend/src/utils/: googleDriveAPI.js
backend/public/: Makefile  README.md  app.js  index.html  styles.css
backend/public/assets/: index-4hx1kEgi.css  index-DEOopUoC.js  index-DiOcJYzW.js  index-ofu4jml5.css  index-rtkSEyZ-.js
backend/src/: index.ts
vscode-extension/: Makefile  README.md  package-lock.json  package.json
vscode-extension/src/: auth.ts  cloud-provider.ts  commands.ts  config.ts  extension.ts  firebase-provider.ts  firebase.ts  google-drive-provider.ts  storage.ts  webview-renderers.ts  webview.ts
web-upload/: .firebaserc  Makefile  app.js  index.html  manifest.json  styles.css  sw.js
web-upload/public/: app.js  index.html  styles.css
zed/: Cargo.toml  README.md  build.sh  extension.toml
zed/src/: commands.rs  config.rs  download.rs  firestore.rs  lib.rs  session.rs
